services-behind-ingress/30 - ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: https-ingress
  annotations:
  #   kubernetes.io/ingress.class: nginx
  #   nginx.ingress.kubernetes.io/ssl-redirect: "false"
  #   ingress.kubernetes.io/ingress.allow-http: "false"
  #   ingress.kubernetes.io/force-ssl-redirect: "true"
  #   ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: dataminer-test-static-ip


spec:
  rules:
  - host: helloworld-v1.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld-v1
          servicePort: 80

  - host: helloworld-v2.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: helloworld-v2
          servicePort: 80
